# IndustrialDataSystem

./: .editorconfig  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_QUALITY.md  CONTRIBUTING.md  DATAFRAME_FILTERING_GUIDE.md  FEATURE_DEVELOPMENT_FLOWCHART.md  GUI_EVENT_FLOW_EXPLANATION.md  HOW_TO_ADD_NEW_FEATURES.md  IndustrialDataSystem.spec  Makefile  README.md  SETUP.md  admin_tools.py  alembic.ini  app.py  auth.py  cloudinary_upload.py  config.py  database.py  db_manager.py  env.example  main.py  migrate_auth.py  migrate_data.py  mypy.ini  onedrive_auth.py  onedrive_upload.py  pyproject.toml  reader_app.py  requirements-dev.txt  requirements.txt  setup_test_data.py  storage_manager.py
.github/workflows/: code-quality.yml
config/: admin_auth_config.json  excel_templates.json  settings.py  users_db.json
industrial_data_system/: .flake8  .gitignore  IndustrialDataSystem.spec  Makefile  __init__.py  main.py  requirements.txt
industrial_data_system/Integrations/: __init__.py  toolkit.py
industrial_data_system/Integrations/Test_APP/: TestApp.py  __init__.py
industrial_data_system/Integrations/analysis/: __init__.py
industrial_data_system/Integrations/anomaly_detection/: __init__.py  anomaly_detector.py  anomaly_prediction_plotter.py
industrial_data_system/Integrations/training/: __init__.py
industrial_data_system/Tests/: Normal_data_to_fft.py
industrial_data_system/ai/: __init__.py  toolkit.py
industrial_data_system/ai/analysis/: data_study.py
industrial_data_system/ai/anomaly_detection/: __init__.py  anomaly_detector.py  anomaly_prediction_plotter.py
industrial_data_system/ai/visualization/: __init__.py  plotter.py
industrial_data_system/apps/: __init__.py  reader.py  upload.py
industrial_data_system/apps/desktop/: __init__.py  reader.py  uploader.py
industrial_data_system/apps/tools/: __init__.py  analyzer.py  plotter.py  train.py
industrial_data_system/cli/: __init__.py  admin.py  migrate_auth.py  migrate_data.py  setup_test_data.py
industrial_data_system/core/: __init__.py  auth.py  config.py  constants.py  database.py  db_manager.py  model_manager.py  storage.py  workers.py
industrial_data_system/notebooks/: 00_quick_start.ipynb  01_data_loading_preprocessing.ipynb  02_fft_analysis.ipynb  03_anomaly_detection.ipynb  04_visualization.ipynb  05_integration_testing.ipynb  README.md  data_preview.ipynb  requirements.txt  sample_analysis.ipynb  sample_synthetic_data_generator.ipynb
industrial_data_system/pipelines/: __init__.py  migration.py  sample_data.py
industrial_data_system/utils/: asc_utils.py
migrations/: README  env.py
migrations/versions/: 20240401_0001_initial.py
plotter_gui_component/: left_panel.py  main_window.py  menu_bar.py  right_panel.py  theme.py  tool_bar.py
plotter_gui_component/components/: Plot_area.py  curve_fitting.py  data_preview.py  statistics_area.py
src/: main.py
src/auth/: admin_onedrive_auth.py  session_manager.py  user_manager.py
src/cloud/: admin_onedrive_connector.py  folder_manager.py  onedrive_downloader.py  onedrive_uploader.py  user_folder_creator.py
src/excel/: excel_creator.py  excel_editor.py  excel_formatter.py  excel_templates.py  excel_validator.py
src/gui/: data_grid.py  excel_editor_panel.py  excel_viewer.py  login_window.py  main_window.py  status_display.py  upload_panel.py
src/metadata/: excel_handler.py  metadata_schema.py
src/utils/: encryption.py  file_validator.py  helpers.py  logger.py
static/css/: styles.css
templates/: README.md  base.html  dashboard.html  forgot_password.html  login.html
tests/: T1.py  asc_to_csv.py  csv_processing.py  evdiently_test.py  test_model_manager.py  trial.py
